--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Legume Credit</string>
+    <string name="app_name">Legume N Credit</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
@@ -10,7 +10,7 @@
     <string name="action_settings2">Info</string>
 
 
-    <string name="output_header">Nitrogen Credit(lb N/acre)</string>
+    <string name="output_header">Legume Credit(lb N/acre)</string>
 
 
     <string name="result_default">000</string>
@@ -20,7 +20,7 @@
     <string name="forage_species2">Other</string>
     <string name="forage_species_header">Forage Species</string>
 
-    <string name="soil_type1">Textured</string>
+    <string name="soil_type1">Medium/Fine</string>
     <string name="soil_type2">Sand</string>
     <string name="soil_type_header">Soil Type</string>
 
@@ -29,11 +29,11 @@
     <string name="regrowth1">\u003C 8</string>
     <string name="regrowth2">\u003E 8</string>
 
-    <string name="stand_density_header">Sand Density</string>
+    <string name="stand_density_header">Stand Density</string>
     <string name="stand_density1">Good</string>
     <string name="stand_density2">Fair</string>
     <string name="stand_density3">Poor</string>
-    <string name="density_info"> - </string>
+    <string name="density_info">  </string>
 
 
 
