--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,9 +49,9 @@
 
     <string name="plus">+</string>
     <string name="minus">-</string>
-    <string name="manure_input">lb/1,000 gal</string>
+    <string name="manure_input">1 gal/acre</string>
 
-    <string name="manure_item_header">Manure Item</string>
+    <string name="manure_item_header">Manure Source</string>
     <string-array name="solid_manure">
         <item>Beef</item>
         <item>Dairy: semi-solid(11.1-20.0% DM)</item>
@@ -84,10 +84,16 @@
     <string name="result_default1">000</string>
     <string name="result_default2">000</string>
     <string name="result_default3">000</string>
+
     <string name="manure_result_default">000</string>
     <string name="manure_result_default1">000</string>
     <string name="manure_result_default2">000</string>
     <string name="manure_result_default3">000</string>
+
+    <string name="manure_result_header0">N</string>
+    <string name="manure_result_header1">P<sub>2</sub>O<sub>5</sub></string>
+    <string name="manure_result_header2">K<sub>2</sub>O</string>
+    <string name="manure_result_header3">S</string>
 
 
 </resources>
