--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
 
     <string name="plus">+</string>
     <string name="minus">-</string>
-    <string name="manure_input">1 gal/acre</string>
+    <string name="manure_input">1 ton/acre</string>
 
     <string name="manure_item_header">Manure Source</string>
     <string-array name="solid_manure">
@@ -85,10 +85,10 @@
     <string name="result_default2">000</string>
     <string name="result_default3">000</string>
 
-    <string name="manure_result_default">000</string>
-    <string name="manure_result_default1">000</string>
-    <string name="manure_result_default2">000</string>
-    <string name="manure_result_default3">000</string>
+    <string name="manure_result_default">00</string>
+    <string name="manure_result_default1">00</string>
+    <string name="manure_result_default2">00</string>
+    <string name="manure_result_default3">00</string>
 
     <string name="manure_result_header0">N</string>
     <string name="manure_result_header1">P<sub>2</sub>O<sub>5</sub></string>
