--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">N Credit</string>
+    <string name="app_name">NPK Calc</string>
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
@@ -54,8 +54,8 @@
     <string name="manure_item_header">Manure Source</string>
     <string-array name="solid_manure">
         <item>Beef</item>
-        <item>Dairy: semi-solid(11.1-20.0% DM)</item>
-        <item>Dairy: solid(>20.9% DM)</item>
+        <item>Dairy: semi-solid (11.1-20.0% DM)</item>
+        <item>Dairy: solid (> 20.0% DM)</item>
         <item>Goat</item>
         <item>Horse</item>
         <item>Poultry: chicken</item>
@@ -67,13 +67,13 @@
 
     <string-array name="liquid_manure">
         <item>Beef</item>
-        <item><![CDATA[Dairy:liquid(<4.0% DM)]]></item>
-        <item>Dairy: slurry(4.1-11.0% DM)</item>
+        <item><![CDATA[Dairy: liquid (< 4.0% DM)]]></item>
+        <item>Dairy: slurry (4.1-11.0% DM)</item>
         <item>Goat</item>
         <item>Poultry</item>
-        <item>Swine:finish(indoor pit)</item>
-        <item>Swine:finish(outdoor pit)</item>
-        <item>Swine: (farrow-nursey, indoor pit)</item>
+        <item>Swine: finish (indoor pit)</item>
+        <item>Swine: finish (outdoor pit)</item>
+        <item>Swine: (farrow-nursery, indoor pit)</item>
         <item>Veal calf</item>
     </string-array>
 
@@ -94,6 +94,7 @@
     <string name="manure_result_header1">P<sub>2</sub>O<sub>5</sub></string>
     <string name="manure_result_header2">K<sub>2</sub>O</string>
     <string name="manure_result_header3">S</string>
+    <string name="manure_rate_header">Application Rate</string>
 
 
 </resources>
