--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,10 +101,10 @@
     <string name="analysis_title">Has the manure been analyzed?</string>
 
     <string name="input_hint">lb/ton</string>
-    <string name="N_input_title">N Credits</string>
-    <string name="P_input_title">P<sub>2</sub>O<sub>5</sub> Credits</string>
-    <string name="K_input_title">K<sub>2</sub>O Credits</string>
-    <string name="S_input_title">S Credits</string>
+    <string name="N_input_title">Available N</string>
+    <string name="P_input_title">Available P<sub>2</sub>O<sub>5</sub></string>
+    <string name="K_input_title">Available K<sub>2</sub>O</string>
+    <string name="S_input_title">Available S</string>
 
 
 </resources>
